# JniDemos

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/fanyiran/jnidemos/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/fanyiran/jnidemos/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/fanyiran/jnidemos/: ExampleUnitTest.java
ffmpegshare/: BuildFFmpeg.md  CREATESO.md  README.md  TODO.md  UseSo.md  build.gradle
ffmpegshare/src/main/: AndroidManifest.xml
ffmpegshare/src/main/cpp/: CMakeLists.txt  ffmpeg.cpp
ffmpegshare/src/main/cpp/include/libavutil/: common.h
ffmpegshare/src/main/java/com/fanyiran/ffmpegshare/: MainActivity.java
ffmpegshare/src/main/res/values/: strings.xml
ffmpegshare_3.3.7/: BuildFFmpeg.md  README.md  UseSo.md
ffmpegshare_3.3.7/src/main/cpp/: CMakeLists.txt  ffmpegcaller.cpp
ffmpegshare_3.3.7/src/main/cpp/include/libavutil/: avutil.h
ffmpegshare_3.3.7/src/main/java/com/fanyiran/ffmpegshare/: MainActivity.java
ffmpegsharebuildone_4.1.3/: BuildFFmpegOne.md  ReadMe.md  UseSo.md  build.gradle
ffmpegsharebuildone_4.1.3/src/main/: AndroidManifest.xml
ffmpegsharebuildone_4.1.3/src/main/cpp/: CMakeLists.txt  ffmpegcaller.cpp
ffmpegsharebuildone_4.1.3/src/main/java/com/fanyiran/ffmpegsharebuildone/: MainActivity.java
ffmpegsharebuildone_4.1.3/src/main/res/values/: strings.xml
ffmpegstatic/: README.md  build.gradle
ffmpegstatic/src/main/: AndroidManifest.xml
ffmpegstatic/src/main/cpp/: CMakeLists.txt  ffmpegstatic.cpp
ffmpegstatic/src/main/cpp/include/libavutil/: avutil.h
ffmpegstatic/src/main/java/com/fanyiran/ffmpegstatic/: MainActivity.java
ffmpegstatic/src/main/res/values/: strings.xml
genstatic/: README.md  build.gradle
genstatic/src/main/: AndroidManifest.xml
genstatic/src/main/cpp/: CMakeLists.txt
genstatic/src/main/cpp/src/: statictest.c  statictest.h
genstatic/src/main/java/com/fanyiran/genstatic/: MainActivity.java
genstatic/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
opencv/: README.md  build.gradle
opencv/src/main/: AndroidManifest.xml
opencv/src/main/cpp/: CMakeLists.txt  use_opencv.cpp
opencv/src/main/java/com/fanyiran/opencv/: CameraSurfaceView.java  CameraUtils.java  ImageUtils.java  MainActivity.java
opencv/src/main/res/layout/: activity_main.xml
usestatic/: README.md  build.gradle
usestatic/src/main/: AndroidManifest.xml
usestatic/src/main/cpp/: CMakeLists.txt  userstatic.cpp
usestatic/src/main/cpp/include/: statictest.h
usestatic/src/main/java/com/fanyiran/usestatic/: MainActivity.java
usestatic/src/main/res/values/: strings.xml
